--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
+    "langchain": "^0.0.75",
     "node-fetch": "^3.3.1"
   }
 }
