--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "token": "MTEwNjk4MTk0MzE1NDg0Nzc3NA.GBb15d.jVZfQrXfKuMB-Z2QPyK93ffVY6NFH0vKQqAUaU"
+    "token": "MTEwNjk4MTk0MzE1NDg0Nzc3NA.GnXjtw.nQbOl6xJ1um8IlNyKCc46AscrMV-WJseba_GIA"
 }
