--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "cowsay": "^1.5.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "langchain": "^0.0.75",
